--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -342,4 +342,5 @@ extraVolumeMounts: []
 falcosidekick:
   # enable falcosidekick deployment
   enabled: false
+  fullfdqn: false
   # for configuration values, see https://github.com/falcosecurity/charts/blob/master/falcosidekick/values.yaml
