--- a/falco/templates/configmap.yaml
+++ b/falco/templates/configmap.yaml
@@ -159,6 +159,7 @@ data:
       enabled: {{ .Values.falco.webserver.enabled }}
       listen_port: {{ .Values.falco.webserver.listenPort }}
       k8s_audit_endpoint: {{ .Values.falco.webserver.k8sAuditEndpoint }}
+      k8s_healthz_endpoint: {{ .Values.falco.webserver.k8sHealthzEndpoint }}
       ssl_enabled: {{ .Values.falco.webserver.sslEnabled }}
       ssl_certificate: {{ .Values.falco.webserver.sslCertificate }}
 
