--- a/falco/templates/daemonset.yaml
+++ b/falco/templates/daemonset.yaml
@@ -99,6 +99,22 @@ spec:
             - name: "{{ $key }}"
               value: "{{ $value }}"
           {{- end }}
+          {{- if .Values.falco.webserver.enabled }}
+          livenessProbe:
+            initialDelaySeconds: {{ .Values.falco.livenessProbe.initialDelaySeconds }}
+            timeoutSeconds: {{ .Values.falco.livenessProbe.timeoutSeconds }}
+            periodSeconds: {{ .Values.falco.livenessProbe.periodSeconds }}
+            httpGet:
+              path: {{ .Values.falco.webserver.k8sHealthzEndpoint }}
+              port: http
+          readinessProbe:
+            initialDelaySeconds: {{ .Values.falco.readinessProbe.initialDelaySeconds }}
+            timeoutSeconds: {{ .Values.falco.readinessProbe.timeoutSeconds }}
+            periodSeconds: {{ .Values.falco.readinessProbe.periodSeconds }}
+            httpGet:
+              path: {{ .Values.falco.webserver.k8sHealthzEndpoint }}
+              port: http
+          {{- end }}
           volumeMounts:
             {{- if .Values.docker.enabled }}
             - mountPath: /host/var/run/docker.sock
