--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -159,10 +159,7 @@ data:
   KAFKA_MINIMUMPRIORITY: "{{ .Values.config.kafka.minimumpriority | b64enc }}"
 
   # PagerDuty Output
-  PAGERDUTY_APIKEY: "{{ .Values.config.pagerduty.apikey | b64enc }}"
-  PAGERDUTY_SERVICE: "{{ .Values.config.pagerduty.service | b64enc }}"
-  PAGERDUTY_ASSIGNEE: "{{ .Values.config.pagerduty.assignee | b64enc }}"
-  PAGERDUTY_ESCALATION_POLICY: "{{ .Values.config.pagerduty.escalationpolicy | b64enc }}"
+  PAGERDUTY_ROUTINGKEY: "{{ .Values.config.pagerduty.routingKey | b64enc }}"
   PAGERDUTY_MINIMUMPRIORITY: "{{ .Values.config.pagerduty.minimumpriority | b64enc }}"
 
   # Kubeless Output
