--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -195,10 +195,7 @@ config:
     minimumpriority: ""
 
   pagerduty:
-    apikey: ""
-    service: ""
-    assignee: ""
-    escalationpolicy: ""
+    routingKey: ""
     minimumpriority: ""
 
   kubeless:
