--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -371,5 +371,5 @@ extraVolumeMounts: []
 falcosidekick:
   # enable falcosidekick deployment
   enabled: false
-  fullfdqn: false
+  fullfqdn: false
   # for configuration values, see https://github.com/falcosecurity/charts/blob/master/falcosidekick/values.yaml
