added GCP Cloud Functions and GCP Cloud Run outputs
Signed-off-by: Batuhan Apaydın <batuhan.apaydin@trendyol.com>

support for wavefront output type

Signed-off-by: Batuhan Apaydın <batuhan.apaydin@trendyol.com>

changes for PR#231 in Falcosidekick

Signed-off-by: Batuhan Apaydın <batuhan.apaydin@trendyol.com>

changes for PR#245 in Falcosidekick

Signed-off-by: Batuhan Apaydın <batuhan.apaydin@trendyol.com>

CHANGELOG fixed

Signed-off-by: Batuhan Apaydın <batuhan.apaydin@trendyol.com>

falcosidekick-ui version bumped to 1.1.0 and falcosidekick version bumped to 2.23.1

Signed-off-by: Batuhan Apaydın <batuhan.apaydin@trendyol.com>

enabling darkmode for falcosidekick-ui

Signed-off-by: Batuhan Apaydın <batuhan.apaydin@trendyol.com>

fixed mutualtls and checkcert variables for some of output types

Signed-off-by: Batuhan Apaydın <batuhan.apaydin@trendyol.com>

updated descriptions of the falcosidekick project and the outputs

Signed-off-by: Batuhan Apaydın <batuhan.apaydin@trendyol.com>

adding mutualtlsfilespath, updating readme and values.yaml files

Signed-off-by: Batuhan Apaydın <batuhan.apaydin@trendyol.com>

fixed CHANGELOG.md

Signed-off-by: Batuhan Apaydın <batuhan.apaydin@trendyol.com>

--- a/falcosidekick/templates/deployment-ui.yaml
+++ b/falcosidekick/templates/deployment-ui.yaml
@@ -32,7 +32,12 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.webui.image.repository }}:{{ .Values.webui.image.tag }}"
           imagePullPolicy: {{ .Values.webui.image.pullPolicy }}
-          args: ["-r", "{{ .Values.webui.retention}}"]
+          args:
+            - "-r"
+            - "{{ .Values.webui.retention }}"
+          {{- if .Values.webui.darkmode }}
+            - "-d"
+          {{- end }}
           ports:
             - name: http
               containerPort: 2802
