--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -29,6 +29,8 @@ data:
   ROCKETCHAT_USERNAME: "{{ .Values.config.rocketchat.username | b64enc }}"
   ROCKETCHAT_MINIMUMPRIORITY: "{{ .Values.config.rocketchat.minimumpriority | b64enc }}"
   ROCKETCHAT_MESSAGEFORMAT: "{{ .Values.config.rocketchat.messageformat | b64enc }}"
+  ROCKETCHAT_MUTUALTLS: "{{ .Values.config.rocketchat.mutualtls | printf "%t" | b64enc }}"
+  ROCKETCHAT_CHECKCERT: "{{ .Values.config.rocketchat.checkcert | printf "%t" | b64enc }}"
 
   # Mattermost Output
   MATTERMOST_WEBHOOKURL: "{{ .Values.config.mattermost.webhookurl | b64enc }}"
@@ -38,6 +40,8 @@ data:
   MATTERMOST_USERNAME: "{{ .Values.config.mattermost.username | b64enc }}"
   MATTERMOST_MINIMUMPRIORITY: "{{ .Values.config.mattermost.minimumpriority | b64enc }}"
   MATTERMOST_MESSAGEFORMAT: "{{ .Values.config.mattermost.messageformat | b64enc }}"
+  MATTERMOST_MUTUALTLS: "{{ .Values.config.mattermost.mutualtls | printf "%t" | b64enc }}"
+  MATTERMOST_CHECKCERT: "{{ .Values.config.mattermost.checkcert | printf "%t" | b64enc }}"
 
   # Teams Output
   TEAMS_WEBHOOKURL: "{{ .Values.config.teams.webhookurl | b64enc }}"
@@ -53,6 +57,8 @@ data:
   # AlertManager Output
   ALERTMANAGER_HOSTPORT: "{{ .Values.config.alertmanager.hostport | b64enc }}"
   ALERTMANAGER_MINIMUMPRIORITY: "{{ .Values.config.alertmanager.minimumpriority | b64enc }}"
+  ALERTMANAGER_MUTUALTLS: "{{ .Values.config.alertmanager.mutualtls | printf "%t" | b64enc }}"
+  ALERTMANAGER_CHECKCERT: "{{ .Values.config.alertmanager.checkcert | printf "%t" | b64enc }}"
 
   # InfluxDB Output
   INFLUXDB_USER: "{{ .Values.config.influxdb.user | b64enc }}"
@@ -60,6 +66,8 @@ data:
   INFLUXDB_HOSTPORT: "{{ .Values.config.influxdb.hostport | b64enc }}"
   INFLUXDB_MINIMUMPRIORITY: "{{ .Values.config.influxdb.minimumpriority | b64enc }}"
   INFLUXDB_DATABASE: "{{ .Values.config.influxdb.database | b64enc }}"
+  INFLUXDB_MUTUALTLS: "{{ .Values.config.influxdb.mutualtls | printf "%t" | b64enc }}"
+  INFLUXDB_CHECKCERT: "{{ .Values.config.influxdb.checkcert | printf "%t" | b64enc }}"
 
   # AWS Output
   AWS_ACCESSKEYID: "{{ .Values.config.aws.accesskeyid | b64enc }}"
@@ -92,6 +100,8 @@ data:
   OPSGENIE_APIKEY: "{{ .Values.config.opsgenie.apikey | b64enc }}"
   OPSGENIE_REGION: "{{ .Values.config.opsgenie.region | b64enc }}"
   OPSGENIE_MINIMUMPRIORITY: "{{ .Values.config.opsgenie.minimumpriority | b64enc }}"
+  OPSGENIE_MUTUALTLS: "{{ .Values.config.opsgenie.mutualtls | printf "%t" | b64enc }}"
+  OPSGENIE_CHECKCERT: "{{ .Values.config.opsgenie.checkcert | printf "%t" | b64enc }}"
 
   # Discord Output
   DISCORD_WEBHOOKURL: "{{ .Values.config.discord.webhookurl | b64enc }}"
@@ -106,6 +116,11 @@ data:
   GCP_STORAGE_BUCKET: "{{ .Values.config.gcp.storage.bucket | b64enc }}"
   GCP_STORAGE_PREFIX: "{{ .Values.config.gcp.storage.prefix | b64enc }}"
   GCP_STORAGE_MINIMUMPRIORITY: "{{ .Values.config.gcp.storage.minimumpriority | b64enc }}"
+  GCP_CLOUDFUNCTIONS_NAME: "{{ .Values.config.gcp.cloudfunctions.name | b64enc }}"
+  GCP_CLOUDFUNCTIONS_MINIMUMPRIORITY: "{{ .Values.config.gcp.cloudfunctions.minimumpriority | b64enc }}"
+  GCP_CLOUDRUN_ENDPOINT: "{{ .Values.config.gcp.cloudrun.endpoint | b64enc }}"
+  GCP_CLOUDRUN_JWT: "{{ .Values.config.gcp.cloudrun.jwt | b64enc }}"
+  GCP_CLOUDRUN_MINIMUMPRIORITY: "{{ .Values.config.gcp.cloudrun.minimumpriority | b64enc }}"
 
   # GoogleChat Output
   GOOGLECHAT_WEBHOOKURL: "{{ .Values.config.googlechat.webhookurl | b64enc }}"
@@ -118,20 +133,30 @@ data:
   ELASTICSEARCH_INDEX: "{{ .Values.config.elasticsearch.index | b64enc }}"
   ELASTICSEARCH_TYPE: "{{ .Values.config.elasticsearch.type | b64enc }}"
   ELASTICSEARCH_MINIMUMPRIORITY: "{{ .Values.config.elasticsearch.minimumpriority | b64enc }}"
+  ELASTICSEARCH_MUTUALTLS: "{{ .Values.config.elasticsearch.mutualtls | printf "%t" | b64enc }}"
+  ELASTICSEARCH_CHECKCERT: "{{ .Values.config.elasticsearch.checkcert | printf "%t" | b64enc }}"
+  ELASTICSEARCH_USERNAME: "{{ .Values.config.elasticsearch.username | b64enc }}"
+  ELASTICSEARCH_PASSWORD: "{{ .Values.config.elasticsearch.password | b64enc }}"
 
   # Loki Output
   LOKI_HOSTPORT: "{{ .Values.config.loki.hostport | b64enc }}"
   LOKI_MINIMUMPRIORITY: "{{ .Values.config.loki.minimumpriority | b64enc }}"
+  LOKI_MUTUALTLS: "{{ .Values.config.loki.mutualtls | printf "%t" | b64enc }}"
+  LOKI_CHECKCERT: "{{ .Values.config.loki.checkcert | printf "%t" | b64enc }}"
 
   # Nats Output
   NATS_HOSTPORT: "{{ .Values.config.nats.hostport | b64enc }}"
   NATS_MINIMUMPRIORITY: "{{ .Values.config.nats.minimumpriority | b64enc }}"
+  NATS_MUTUALTLS: "{{ .Values.config.nats.mutualtls | printf "%t" | b64enc }}"
+  NATS_CHECKCERT: "{{ .Values.config.nats.checkcert | printf "%t" | b64enc }}"
 
   # Stan Output
   STAN_HOSTPORT: "{{ .Values.config.stan.hostport | b64enc }}"
   STAN_CLUSTERID: "{{ .Values.config.stan.clusterid | b64enc }}"
   STAN_CLIENTID: "{{ .Values.config.stan.clientid | b64enc }}"
   STAN_MINIMUMPRIORITY: "{{ .Values.config.stan.minimumpriority | b64enc }}"
+  STAN_MUTUALTLS: "{{ .Values.config.stan.mutualtls | printf "%t" | b64enc }}"
+  STAN_CHECKCERT: "{{ .Values.config.stan.checkcert | printf "%t" | b64enc }}"
 
   # Statsd
   STATSD_FORWARDER: "{{ .Values.config.statsd.forwarder | b64enc }}"
@@ -146,6 +171,8 @@ data:
   WEBHOOK_ADDRESS: "{{ .Values.config.webhook.address | b64enc }}"
   WEBHOOK_CUSTOMHEADERS: "{{ .Values.config.webhook.customHeaders | b64enc }}"
   WEBHOOK_MINIMUMPRIORITY: "{{ .Values.config.webhook.minimumpriority | b64enc }}"
+  WEBHOOK_MUTUALTLS: "{{ .Values.config.webhook.mutualtls | printf "%t" | b64enc }}"
+  WEBHOOK_CHECKCERT: "{{ .Values.config.webhook.checkcert | printf "%t" | b64enc }}"
 
   # Azure Output
   AZURE_EVENTHUB_NAME: "{{ .Values.config.azure.eventHub.name | b64enc }}"
@@ -159,10 +186,7 @@ data:
   KAFKA_MINIMUMPRIORITY: "{{ .Values.config.kafka.minimumpriority | b64enc }}"
 
   # PagerDuty Output
-  PAGERDUTY_APIKEY: "{{ .Values.config.pagerduty.apikey | b64enc }}"
-  PAGERDUTY_SERVICE: "{{ .Values.config.pagerduty.service | b64enc }}"
-  PAGERDUTY_ASSIGNEE: "{{ .Values.config.pagerduty.assignee | b64enc }}"
-  PAGERDUTY_ESCALATION_POLICY: "{{ .Values.config.pagerduty.escalationpolicy | b64enc }}"
+  PAGERDUTY_ROUTINGKEY: "{{ .Values.config.pagerduty.routingkey | b64enc }}"
   PAGERDUTY_MINIMUMPRIORITY: "{{ .Values.config.pagerduty.minimumpriority | b64enc }}"
 
   # Kubeless Output
@@ -170,6 +194,8 @@ data:
   KUBELESS_NAMESPACE: "{{ .Values.config.kubeless.namespace | b64enc }}"
   KUBELESS_PORT: "{{ .Values.config.kubeless.port | toString | b64enc }}"
   KUBELESS_MINIMUMPRIORITY: "{{ .Values.config.kubeless.minimumpriority | b64enc }}"
+  KUBELESS_MUTUALTLS: "{{ .Values.config.kubeless.mutualtls | printf "%t" | b64enc }}"
+  KUBELESS_CHECKCERT: "{{ .Values.config.kubeless.checkcert | printf "%t" | b64enc }}"
 
   # OpenFaaS
   OPENFAAS_GATEWAYNAMESPACE: "{{ .Values.config.openfaas.gatewaynamespace | b64enc }}"
@@ -178,6 +204,8 @@ data:
   OPENFAAS_FUNCTIONNAMESPACE: "{{ .Values.config.openfaas.functionnamespace | b64enc }}"
   OPENFAAS_GATEWAYPORT: "{{ .Values.config.openfaas.gatewayport | toString | b64enc }}"
   OPENFAAS_MINIMUMPRIORITY: "{{ .Values.config.openfaas.minimumpriority | b64enc }}"
+  OPENFAAS_MUTUALTLS: "{{ .Values.config.openfaas.mutualtls | printf "%t" | b64enc }}"
+  OPENFAAS_CHECKCERT: "{{ .Values.config.openfaas.checkcert | printf "%t" | b64enc }}"
 
   # Cloud Events Output
   CLOUDEVENTS_ADDRESS: "{{ .Values.config.cloudevents.address | b64enc }}"
@@ -188,6 +216,16 @@ data:
   RABBITMQ_URL: "{{ .Values.config.rabbitmq.url | b64enc}}"
   RABBITMQ_QUEUE: "{{ .Values.config.rabbitmq.queue | b64enc}}"
   RABBITMQ_MINIMUMPRIORITY: "{{ .Values.config.rabbitmq.minimumpriority | b64enc}}"
+
+  # Wavefront Output
+  WAVEFRONT_ENDPOINTTYPE: "{{ .Values.config.wavefront.endpointtype | b64enc}}"
+  WAVEFRONT_ENDPOINTHOST: "{{ .Values.config.wavefront.endpointhost | b64enc}}"
+  WAVEFRONT_ENDPOINTTOKEN: "{{ .Values.config.wavefront.endpointtoken | b64enc}}"
+  WAVEFRONT_ENDPOINTMETRICPORT: "{{ .Values.config.wavefront.endpointmetricport | toString | b64enc}}"
+  WAVEFRONT_FLUSHINTERVALSECONDS: "{{ .Values.config.wavefront.flushintervalseconds | toString | b64enc}}"
+  WAVEFRONT_BATCHSIZE: "{{ .Values.config.wavefront.batchsize | toString | b64enc}}"
+  WAVEFRONT_METRICNAME: "{{ .Values.config.wavefront.metricname | b64enc}}"
+  WAVEFRONT_MINIMUMPRIORITY: "{{ .Values.config.wavefront.minimumpriority | b64enc}}"
 
   # WebUI Output
   {{- if .Values.webui.enabled -}}
