--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 2
 
 image:
   repository: falcosecurity/falcosidekick
-  tag: 2.22.0
+  tag: 2.23.1
   pullPolicy: IfNotPresent
 
 podSecurityContext:
@@ -34,7 +34,7 @@ config:
   ##
   ## a list of escaped comma separated custom fields to add to falco events, syntax is "key:value\,key:value"
   customfields: ""
-  checkcert: true
+  mutualtlsfilespath: "/etc/certs"  # folder which will used to store client.crt, client.key and ca.crt files for mutual tls (default: "/etc/certs")
 
   slack:
     webhookurl: ""
@@ -52,6 +52,8 @@ config:
     outputformat: "all"
     minimumpriority: ""
     messageformat: ""
+    mutualtls: false
+    checkcert: true
 
   mattermost:
     webhookurl: ""
@@ -61,6 +63,8 @@ config:
     outputformat: "all"
     minimumpriority: ""
     messageformat: ""
+    mutualtls: false
+    checkcert: true
 
   teams:
     webhookurl: ""
@@ -76,12 +80,18 @@ config:
   alertmanager:
     hostport: ""
     minimumpriority: ""
+    mutualtls: false
+    checkcert: true
 
   elasticsearch:
     hostport: ""
     index: "falco"
     type: "event"
     minimumpriority: ""
+    mutualtls: false
+    checkcert: true
+    username: ""
+    password: ""
 
   influxdb:
     hostport: ""
@@ -89,20 +99,28 @@ config:
     user: ""
     password: ""
     minimumpriority: ""
+    mutualtls: false
+    checkcert: true
 
   loki:
     hostport: ""
     minimumpriority: ""
+    mutualtls: false
+    checkcert: true
 
   nats:
     hostport: ""
     minimumpriority: ""
+    mutualtls: false
+    checkcert: true
 
   stan:
     hostport: ""
     clusterid: ""
     clientid: ""
     minimumpriority: ""
+    mutualtls: false
+    checkcert: true
 
   aws:
     accesskeyid: ""
@@ -140,6 +158,8 @@ config:
     apikey: ""
     region: ""
     minimumpriority: ""
+    mutualtls: false
+    checkcert: true
 
   statsd:
     forwarder: ""
@@ -154,6 +174,8 @@ config:
     address: ""
     customHeaders: ""  # a list of comma separated custom headers to add, syntax is "key:value\,key:value"
     minimumpriority: ""
+    mutualtls: false
+    checkcert: true
 
   azure:
     subscriptionID: ""
@@ -180,6 +202,13 @@ config:
       prefix: ""
       bucket: ""
       minimumpriority: "debug"
+    cloudfunctions:
+      name: ""  # The name of the Cloud Function name
+      minimumpriority: ""
+    cloudrun:
+      endpoint: ""  # the URL of the Cloud Run function
+      jwt: ""  # JWT for the private access to Cloud Run function
+      minimumpriority: ""
 
   googlechat:
     webhookurl: ""
@@ -195,10 +224,7 @@ config:
     minimumpriority: ""
 
   pagerduty:
-    apikey: ""
-    service: ""
-    assignee: ""
-    escalationpolicy: ""
+    routingkey: ""
     minimumpriority: ""
 
   kubeless:
@@ -206,6 +232,8 @@ config:
     namespace: ""
     port: 8080
     minimumpriority: ""
+    mutualtls: false
+    checkcert: true
 
   openfaas:
     functionname: ""
@@ -214,6 +242,8 @@ config:
     gatewayport: 8080
     gatewaynamespace: "openfaas"
     minimumpriority: ""
+    mutualtls: false
+    checkcert: true
 
   cloudevents:
     address: ""
@@ -224,6 +254,16 @@ config:
     url: ""
     queue: ""
     minimumpriority: "debug"
+
+  wavefront:
+    endpointtype: ""  # Wavefront endpoint type, must be 'direct' or 'proxy'. If not empty, with endpointhost, Wavefront output is enabled
+    endpointhost: ""  # Wavefront endpoint address (only the host). If not empty, with endpointhost, Wavefront output is enabled
+    endpointtoken: ""  # Wavefront token. Must be used only when endpointtype is 'direct'
+    endpointmetricport: 2878  # Wavefront endpoint port when type is 'proxy'
+    metricname: "falco.alert"  # Metric to be created in Wavefront. Defaults to falco.alert
+    batchsize: 10000  # max batch of data sent per flush interval. defaults to 10,000. Used only in direct mode
+    flushintervalseconds: 1  # Time in seconds between flushing metrics to Wavefront. Defaults to 1s
+    minimumpriority: "debug"  # minimum priority of event for using this output, order is emergency|alert|critical|error|warning|notice|informational|debug or "" (default)
 
 service:
   type: ClusterIP
@@ -263,10 +303,11 @@ affinity: {}
 
 webui:
   enabled: false
+  darkmode: false
 
   image:
     repository: falcosecurity/falcosidekick-ui
-    tag: "v1.0.1"
+    tag: "v1.1.0"
     pullPolicy: IfNotPresent
 
   podSecurityContext:
